community/lists/devel/att-18269/attachment
<div dir="ltr">Hi Folks,<div><br></div><div>Looks like master can&#39;t build any more, at least not on cray with --enable-picky option:</div><div><br></div><div><pre style="color:rgb(0,0,0)">-- make all -j 8 result_stderr ---
keyval_lex.c: In function &#39;yy_get_next_buffer&#39;:
keyval_lex.c:751:18: warning: comparison between signed and unsigned integer expressions
[-Wsign-compare]
   for ( n = 0; n &lt; max_size &amp;&amp; \
                  ^
keyval_lex.c:1284:3: note: in expansion of macro &#39;YY_INPUT&#39;
   YY_INPUT( (&amp;YY_CURRENT_BUFFER_LVALUE-&gt;yy_ch_buf[number_to_move]),
show_help_lex.c: In function &#39;yy_get_next_buffer&#39;:
show_help_lex.c:647:18: warning: comparison between signed and unsigned integer expressions
[-Wsign-compare]
   for ( n = 0; n &lt; max_size &amp;&amp; \
                  ^
show_help_lex.c:1081:3: note: in expansion of macro &#39;YY_INPUT&#39;
   YY_INPUT( (&amp;YY_CURRENT_BUFFER_LVALUE-&gt;yy_ch_buf[number_to_move]),
common_verbs_usnic_fake.c: In function &#39;fake_driver_init&#39;:
common_verbs_usnic_fake.c:92:9: error: implicit declaration of function &#39;sscanf&#39;
[-Werror=implicit-function-declaration]
     if (sscanf(value, &quot;%i&quot;, &amp;vendor) != 1) {
common_verbs_usnic_fake.c:92:9: warning: incompatible implicit declaration of built-in function
&#39;sscanf&#39;
cc1: some warnings being treated as errors
make[2]: *** [libmca_common_verbs_usnic_la-common_verbs_usnic_fake.lo] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1</pre><pre style="color:rgb(0,0,0)"><br></pre><pre style="color:rgb(0,0,0)">Howard</pre><pre style="color:rgb(0,0,0)"><br></pre></div></div>

